# Go

./: .gitignore  Go.py  README.md
main/: constants.py  game.py  main.py  main_menu.py  pyproject.toml  scene.py  ui_elements.py
menu_scene/: main.py
